Issue #283 reduce scroll bars
Cut the padding of main on the reward in half to give the iframe more room. We can't have horizontal scroll bars of a window inside of a sidebar that may also have scroll bars.

--- a/data/css/all-aboard.css
+++ b/data/css/all-aboard.css
@@ -199,7 +199,7 @@ a:focus {
 }
 
 main.reward-sidebar {
-    padding: 20px 40px;
+    padding: 20px 20px;
     text-align: left;
 }
 
